[tool.poetry]
name = "aia-chaser"
version = "1.0.0"
license = "MIT"
readme = "README.md"
# repository = ""

description = "Chase authority information access from a host certificate to complete the chain of trust."

authors = ["Josep Pon Farreny <jponfarreny@gmail.com>"]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

# [tool.poetry.scripts]
# aia_chaser = "aia_chaser.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = ">=40.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Formatters
black = "^22.12.0"
isort = "^5.13.2"

# Linters
mypy = "^1.8.0"
ruff = "^0.1"
pylint = "^3.0.3" # for pyreverse

# Packages vulnerabilities scan
safety = "*"

# Pre-commit


# Other tools
rope = "^1.11.0" # Rename variables
pipdeptree = "^2.13.2"
pre-commit = "^3.5.0"
toml = "^0.10.2"
bump-my-version = "^0.16.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"  # random shuffle tests
xdoctest = "^1.1.2"
faker = "^22.4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
markdown-include = "*"
pymdown-extensions = "*"

[tool.black]
target-version = ["py36", "py37", "py38"]
line-length = 88

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
cache_dir = ".cache/mypy/"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = "docs/"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
cache_dir = ".cache"
testpaths = [
    "tests",
    "aia_chaser"
]
addopts = [
    "--strict",
    "-r sxX",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--no-cov-on-fail",
    "--xdoc",
]
console_output_style = "count"
markers = ""
filterwarnings = [
    "ignore::DeprecationWarning",
]


[tool.bumpversion]
current_version = "1.0.0"
commit = false
commit_args = "--no-verify"
tag = false
tag_name = "{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<dev>post)\\d+\\.dev\\d+)?"
serialize = [
    "{major}.{minor}.{patch}.dev-{dev}",
    "{major}.{minor}.{patch}"
]
message = "Version updated from {current_version} to {new_version}"

[[tool.bumpversion.files]]
filename = "aia_chaser/__init__.py"

[tool.ruff]
cache-dir = ".cache/ruff"
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
    "scripts",
]
line-length = 88
select = [
    "A",
    "B",
    "C9",
    "COM",
    "D",
    "I",
    "E",
    "F",
    "N",
    # "NPY",
    "PIE",
    "Q",
    # "RST",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T",
    "W",
]
ignore = [
    "D100",
    "D104",
    "D107",
    "D401",
]


[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"*/__init__.py" = [
    "F401",
]
"tests/*.py" = [
    "D103",
    "S101",
]
"aia_chaser/cli.py" = ["B008"]
