[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[flake8]
ignore =
    # full code list can be found here: https://wemake-python-stylegui.de/en/latest/pages/usage/violations/
    # D100: Missing docstring in public module
    D100,
    # D104: Missing docstring in public package
    D104,
    # D107: Missing docstring in __init__
    D107,
    # D401: First line should be in imperative mood
    D401,
    # E203: whitespace before ‘:’
    E203,
    # E266: too many leading ‘#’ for block comment
    E266,
    # RST301: Unexpected indentation.
    RST301,
    # RST303: Unknown directive type "XXX".
    RST303,
    # RST304: Unknown interpreted text role "XXX".
    RST304,
    # W503: line break before binary operator
    W503,
    # W504: line break after binary operator
    W504,
    # WPS303: Found underscored number: {0} - Forbids to use underscores (_) in numbers.
    WPS303,
    # WPS305: Found `f` string - Forbid f strings.
    WPS305,
    # WPS348: Found a line that starts with a dot' - Forbids to start lines with a dot.
    WPS348,
    # Numpy and Pandas mixes bitwise and comparison operators
	WPS465,
    # WPS529: Found implicit `.get()` dict usage - Forbids to use implicit .get() dict method.
    WPS529,
    # Google Python style is not RST until after processed by Napoleon
    # See https://github.com/peterjc/flake8-rst-docstrings/issues/17
    RST201,RST203,RST301,
per-file-ignores =
    aia_chaser/__init__.py: WPS412
    aia_chaser/cli.py: B008, DAR101, WPS404, DAR101
    tests/*.py: D103, S101, WPS226
inline-quotes = double
max-line-length = 88
max-imports = 20
max-complexity = 18
max-line-complexity = 17
max-cognitive-score = 15
max-try-body-length = 2
max-local-variables = 10
max-module-members = 10
max-arguments = 6
max-annotation-complexity = 4
statistics = False
format = wemake
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    scripts,

[coverage:run]
branch = true
data_file = .cache/coverage
omit =
    .venv/*
    */tests/*
    */__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    except DistributionNotFound
    TYPE_CHECKING
