[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[coverage:run]
branch = true
data_file = .cache/coverage
omit =
    .venv/*
    */tests/*
    */__main__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    except DistributionNotFound
    TYPE_CHECKING
